--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,3 +18,10 @@
     background-color: white;
     transform: rotate(110deg);
   } */
+
+  @layer components{
+    .sidebar-icon{
+      @apply relative flex items-center justify-center
+             h-12 w-12 mt-2 mb-2 mx-auto;
+    }
+  }
